Fix jumping circle.

--- a/assets/sass/home.scss
+++ b/assets/sass/home.scss
@@ -25,6 +25,7 @@ header {
 .my-ugly-mug {
   border-radius: 50%;
   max-width: 7em;
+  max-height: 7em;
   margin: 0 auto;
   border: 0.4em solid #fff;
   float: left;
